bug total dark mode fixed

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,6 +38,6 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
 } 
